--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "ember-cli-6to5": "0.2.1",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.1.2",
     "ember-data": "1.0.0-beta.12",
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "ember-cli-mocha": "~0.2.1"
   },
   "keywords": [
     "ember-addon"
@@ -39,6 +39,7 @@
     "configPath": "tests/dummy/config"
   },
   "dependencies": {
-    "fs-extra": "~0.13.0"
+    "fs-extra": "~0.13.0",
+    "es6-module-loader": "~0.11.2"
   }
 }
