added node test/runner.js for testing blueprints

--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.3",
     "ember-cli-test-loader": "dgeb/ember-cli-test-loader#test-agnostic",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
-    "ember-mocha": "~0.2.0"
+    "ember-mocha": "~0.2.0",
+    "sinon": "http://sinonjs.org/releases/sinon-1.12.2.js"
   }
 }
