--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
+    "chai": "^2.1.0",
     "ember-cli": "0.1.15",
     "ember-cli-6to5": "^3.0.0",
     "ember-cli-app-version": "0.3.1",
@@ -31,9 +32,12 @@
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.14.1",
     "ember-export-application-global": "^1.0.2",
+    "ember-sinon": "0.0.3",
     "express": "^4.8.5",
     "glob": "^4.0.5",
-    "ember-cli-mocha": "~0.2.1"
+    "mocha": "^2.1.0",
+    "tmp-sync": "^1.0.1",
+    "walk-sync": "^0.1.3"
   },
   "keywords": [
     "ember-addon"
