--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "ember-cli-test-loader": "dgeb/ember-cli-test-loader#test-agnostic",
     "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
     "ember-mocha": "~0.2.0",
-    "sinon": "http://sinonjs.org/releases/sinon-1.12.2.js"
+    "sinon": "http://sinonjs.org/releases/sinon-1.12.2.js",
+    "mock-indexeddb": "https://github.com/szimmers/mock-indexeddb"
   }
 }
